# nba_sim

./: .env.example  .gitignore  PLAN.md  README.md  prompt.md  pyproject.toml
configs/: data.yaml  model.yaml  train.yaml
scripts/: build_features.py  fetch_all_seasons.py  simulate_game.py  train.py
src/nba_sim/: __init__.py  cli.py
src/nba_sim/data/: __init__.py  etl.py  fetch.py  schema.py  scrape_bref.py  splits.py
src/nba_sim/features/: __init__.py  context.py  matchup.py  rolling.py
src/nba_sim/models/: __init__.py  baseline_glm.py  encoders.py  heads.py  hierarchical.py  losses.py
src/nba_sim/simulate/: __init__.py  api.py  sampler.py
src/nba_sim/training/: __init__.py  dataset.py  loop.py  metrics.py
src/nba_sim/utils/: __init__.py  io.py  logging.py  seed.py
tests/: test_constraints.py  test_data_schema.py  test_features.py  test_model_shapes.py  test_simulate_api.py
