[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-sim"
version = "0.1.0"
description = "Hierarchical neural network that simulates realistic NBA box scores with hard constraints enforced by construction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Krish" }]
keywords = ["nba", "basketball", "simulation", "pytorch", "sports-analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Pinned for reproducibility. Bump deliberately, not casually.
# TODO: verify latest on first install — versions below are the current stable releases as of repo scaffold.
dependencies = [
    # Core numerics / ML
    "torch==2.5.1",             # CUDA build selected via extra-index-url, see README
    "numpy==2.1.3",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    # Dataframes / storage
    "polars==1.17.1",
    "pyarrow==18.1.0",
    "duckdb==1.1.3",
    # Data sources
    "nba-api==1.7.0",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "tenacity==9.0.0",
    # Typed records / config
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    # CLI
    "typer==0.15.1",
    "rich==13.9.4",
    # Experiment tracking
    "wandb==0.19.1",
    # Utilities
    "tqdm==4.67.1",
    "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "hypothesis==6.122.3",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-requests==2.32.0.20241016",
    "types-PyYAML==6.0.12.20240917",
    "pre-commit==4.0.1",
    "ipykernel==6.29.5",
    "jupyterlab==4.3.3",
    "matplotlib==3.9.3",
    "seaborn==0.13.2",
]

[project.scripts]
nba-sim = "nba_sim.cli:app"

[project.urls]
Homepage = "https://github.com/krish/nba-sim"
Issues = "https://github.com/krish/nba-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nba_sim*"]

[tool.setuptools.package-data]
nba_sim = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF",
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"notebooks/**" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true  # nba_api, etc. have no stubs
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: requires network access",
    "gpu: requires a CUDA device",
]
